--- a/index.html
+++ b/index.html
@@ -178,28 +178,32 @@
 <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/SEO.jpg" class="d-block w-100" alt="...">
+      <img src="/MinorMartEtech
+/assets/SEO.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="h1 text-body-secondary">SEO SERVICES</h5>
         <p class="h6 text-body-secondary " >Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/stock.jPG" class="d-block w-100" alt="...">
+      <img src="/MinorMartEtech
+/assets/stock.jPG" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="h1  ">FINANCIAL ADVICE</h5>
         <p class="h6 " >Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/fianacial advice.jpg" class="d-block w-100" alt="...">
+      <img src="/MinorMartEtech
+/assets/fianacial advice.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="h1 text-body-secondary ">Finance Advisory</h5>
         <p class="h6 text-body-secondary" >Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/video eit.jpg" class="d-block w-100" alt="...">
+      <img src="/MinorMartEtech
+/assets/video eit.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="h1">Video Editing</h5>
         <p class="h6" >Some representative placeholder content for the first slide.</p>
