--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/MinorMartEtech
-/assets/video eit.jpg" class="d-block w-100" alt="...">
+      <img src="/MinorMartEtech/assets/video eit.jpg.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5 class="h1">Video Editing</h5>
         <p class="h6" >Some representative placeholder content for the first slide.</p>
