--- a/index.html
+++ b/index.html
@@ -1,107 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bootstrap Components</title>
-
-  <!-- Bootstrap CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MM Tech</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
   <style>
-    .feature-icon-small { width:3rem; height:3rem; border-radius:.75rem; }
-    .carousel-inner { list-style:none; }
-
-    /* Utility Shadows */
-    .text-shadow-1 { text-shadow:0 .125rem .25rem rgba(0,0,0,.25); }
-    .text-shadow-2 { text-shadow:0 .25rem .5rem rgba(0,0,0,.25); }
-    .text-shadow-3 { text-shadow:0 .5rem 1.5rem rgba(0,0,0,.25); }
+    .feature-icon-small { width: 3rem; height: 3rem; border-radius: .75rem; }
+    .text-shadow-1 { text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25); }
+    .text-shadow-2 { text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25); }
+    .text-shadow-3 { text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25); }
   </style>
 </head>
-
 <body>
+
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <svg width="20" height="22" fill="currentColor" class="bi bi-database-check">
-          <path d="…"/>
-          <path d="…"/>
-        </svg>
-        MM Tech
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+      <a class="navbar-brand" href="#">MM Tech</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Services</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">SEO Services</a></li>
               <li><a class="dropdown-item" href="#">Financial Advisory</a></li>
               <li><a class="dropdown-item" href="#">Stock Advisory</a></li>
-              <li><a class="dropdown-item" href="#">Video-Editing Services</a></li>
+              <li><a class="dropdown-item" href="#">Video Editing</a></li>
             </ul>
           </li>
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search our Services">
+          <input class="form-control me-2" type="search" placeholder="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </div>
   </nav>
 
-  <!-- Main Banner -->
+  <!-- Hero Banner -->
   <section class="px-4 pt-5 my-5 text-center border-bottom">
     <h1 class="display-4 fw-bold">MinorMart Tech</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">
-        Quickly design and customize responsive mobile‑first sites with Bootstrap...
-      </p>
+      <p class="lead mb-4">Quickly design and customize responsive mobile‑first sites with Bootstrap...</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <button class="btn btn-success btn-lg px-4 me-sm-3">Our Services</button>
+        <button id="home-ourServices" class="btn btn-success btn-lg px-4 me-sm-3">Our Services</button>
         <button class="btn btn-outline-secondary btn-lg px-4">Contact Us</button>
       </div>
     </div>
-    <div class="overflow-hidden" style="max-height:30vh;">
+    <div class="overflow-hidden" style="max-height:50vh;">
       <div class="container px-5">
-        <img src="https://uploads‑ssl.webflow.com/...‑p-1600.webp" class="img-fluid rounded-3 shadow-lg mb-4" alt="Example image">
+        <img src="asset/heroImg.png" class="img-fluid rounded-3 shadow-lg mb-1" alt="Example image">
       </div>
     </div>
   </section>
 
   <!-- Features -->
-  <section class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">
-      <svg width="48" height="30" fill="currentColor" class="bi bi-cloud-fill"><path d="…"/></svg>
-      Our Services
-    </h2>
-
+  <section id="services" class="container px-4 py-5">
+    <h2  class="pb-2 border-bottom">Our Services</h2>
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column gap-2">
-        <h2 class="fw-bold">Left‑aligned title explaining these awesome features</h2>
-        <p class="text-body-secondary">
-          Paragraph to explain the heading...
-        </p>
+        <h2 class="fw-bold">Explore Our Feature-Rich Offerings</h2>
+        <p class="text-body-secondary">We deliver powerful digital services to help your brand grow online.</p>
         <a href="#" class="btn btn-primary btn-lg">Explore us</a>
       </div>
-
       <div class="col">
         <div class="row row-cols-1 row-cols-sm-2 g-4">
-          <!-- Repeat this block for each feature -->
           <div class="col d-flex flex-column gap-2">
-            <div class="feature-icon-small d-inline-flex bg-primary bg-gradient text-white justify-content-center align-items-center fs-4 rounded-3">
-              <svg width="26" height="23" class="bi bi-globe2"><path d="…"/></svg>
+            <div class="feature-icon-small d-inline-flex bg-primary text-white justify-content-center align-items-center fs-4">
+              <i class="bi bi-globe2"></i>
             </div>
             <h4 class="fw-semibold mb-0">SEO Services</h4>
-            <p class="text-body-secondary">Explanation below the heading.</p>
+            <p class="text-body-secondary">Boost your web traffic and rank higher on search engines.</p>
           </div>
-          <!-- …other features… -->
+          <!-- Add more features here -->
+          <div class="col d-flex flex-column gap-2">
+            <div class="feature-icon-small d-inline-flex bg-success text-white justify-content-center align-items-center fs-4">
+              <i class="bi bi-bar-chart"></i>
+            </div>
+            <h4 class="fw-semibold mb-0">Web Analytics</h4>
+            <p class="text-body-secondary">Gain insights into your website's performance and user behavior.</p>
         </div>
+          <div class="col d-flex flex-column gap-2">
+            <div class="feature-icon-small d-inline-flex bg-success text-white justify-content-center align-items-center fs-4">
+              <i class="bi bi-camera"></i>
+            </div>
+            <h4 class="fw-semibold mb-0">Photography</h4>
+            <p class="text-body-secondary">Gain insights into your website's performance and user behavior.</p>
+        </div>
+          <div class="col d-flex flex-column gap-2">
+            <div class="feature-icon-small d-inline-flex bg-primary text-white justify-content-center align-items-center fs-4">
+              <i class="bi bi-camera"></i>
+            </div>
+            <h4 class="fw-semibold mb-0">Photography</h4>
+            <p class="text-body-secondary">Gain insights into your website's performance and user behavior.</p>
+        </div>
+        
       </div>
     </div>
   </section>
@@ -111,58 +111,66 @@
     <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://random-image-pepebigotes.vercel.app/api/random-image" class="b-block w-60" width="100%" height="400vh" alt="…">
+          <img src="https://random-image-pepebigotes.vercel.app/api/random-image" class="d-block w-100" height="400" alt="Slide 1">
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="h1 text-body-secondary">SEO Services</h5>
-            <p class="h6 text-body-secondary">Some representative placeholder content.</p>
+            <h5>SEO Services</h5>
+            <p>Some representative placeholder content.</p>
           </div>
         </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://random-image-pepebigotes.vercel.app/api/random-image" class="b-block w-60" width="100%" height="400vh" alt="…">
+        <div class="carousel-item">
+          <img src="https://random-image-pepebigotes.vercel.app/api/random-image" class="d-block w-100" height="400" alt="Slide 2">
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="h1 text-body-secondary">SEO Services</h5>
-            <p class="h6 text-body-secondary">Some representative placeholder content.</p>
+            <h5>Web Analytics</h5>
+            <p>Insightful data to grow your online presence.</p>
           </div>
         </div>
-        <!-- …other slides… -->
+        <div class="carousel-item">
+          <img src="https://random-image-pepebigotes.vercel.app/api/random-image" class="d-block w-100" height="400" alt="Slide 2">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Videgraphy</h5>
+            <p>Insightful data to grow your online presence.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://random-image-pepebigotes.vercel.app/api/random-image" class="d-block w-100" height="400" alt="Slide 2">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Photography</h5>
+            <p>Insightful data to grow your online presence.</p>
+          </div>
+        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="container">
-    <div class="row row-cols-2 row-cols-sm-6 row-cols-md-4 py-5 border-top">
-      <div class="col mb-4"><svg width="100" height="100" class="bi bi-database-check"><path d="…"/></svg>MMTech</div>
-      <div class="col mb-4"></div>
-      <div class="col mb-4">
-        <h5>Section</h5>
+  <footer class="container py-5 border-top">
+    <div class="row">
+      <div class="col mb-3">
+        <h5>MM Tech</h5>
+        <p class="text-body-secondary">MM Tech © 2023 Company, Inc</p>
+      </div>
+      <div class="col mb-3">
+        <h5>Links</h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-          <!-- …other links… -->
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Services</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Contact</a></li>
         </ul>
       </div>
-      <!-- …repeat for other sections… -->
-    </div>
-
-    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-      <span class="text-body-secondary">MM tech © 2023 Company, Inc</span>
-      <ul class="nav list-unstyled d-flex">
-        <li class="ms-3"><a href="#" class="text-body-secondary">{SVG icons…}</a></li>
-        <!-- … -->
-      </ul>
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<script src="script.js"></script>
 </html>
